Fix resume path

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </a>
         </div>
         <div class="link">
-          <a href="static/Resume.pdf" target="_blank" rel="noopener noreferrer">
+          <a href="statics/Resume.pdf" target="_blank" rel="noopener noreferrer">
             <i class="grow fa-4x fa-solid fa-file-pdf"></i>
           </a>
         </div>
