Scroll for overflow in code blocks

--- a/blog.html
+++ b/blog.html
@@ -46,6 +46,7 @@
         word-wrap: break-word;
         box-decoration-break: clone;
         line-height: 1.25;
+        overflow-x: scroll;
       }
 
       html, body {
