Fix styling for mobile devices

--- a/index.html
+++ b/index.html
@@ -56,18 +56,23 @@
       }
 
       .App-header {
-        margin-top: 40vh;
+        margin-top: 25vh;
         font-size: 3em;
+        text-align: center;
+        width: 90%;
       }
 
       .link-container {
-        display: flex;
+        width: 90%;
+        display: inline-flex;
         justify-content: center;
+        font-size: 3em;
+        flex-wrap: wrap;
       }
 
       .link {
-        margin-left: 35px;
-        margin-right: 35px;
+        margin-left: .2em;
+        margin-right: .2em;
       }
 
       .link:hover{
@@ -89,27 +94,27 @@
       <div class="link-container">
         <div class="link">
           <a href="https://github.com/Merctron" target="_blank" rel="noopener noreferrer">
-            <i class="grow fa-4x fa-brands fa-square-github"></i>
+            <i class="grow fa-brands fa-square-github"></i>
           </a>
         </div>
         <div class="link">
           <a href="statics/Resume.pdf" target="_blank" rel="noopener noreferrer">
-            <i class="grow fa-4x fa-solid fa-file-pdf"></i>
+            <i class="grow fa-solid fa-file-pdf"></i>
           </a>
         </div>
         <div class="link">
           <a href="blog.html" target="_blank" rel="noopener noreferrer">
-            <i class="grow fa-4x fa-solid fa-paragraph"></i>
+            <i class="grow fa-solid fa-paragraph"></i>
           </a>
         </div>
         <div class="link">
           <a href="mailto:murtuzakainan@gmail.com" target="_blank" rel="noopener noreferrer">
-            <i class="grow fa-4x fa-solid fa-envelope-open-text"></i>
+            <i class="grow fa-solid fa-envelope-open-text"></i>
           </a>
         </div>
         <div class="link">
           <a href="https://www.linkedin.com/in/merctron" target="_blank" rel="noopener noreferrer">
-            <i class="grow fa-4x fa-brands fa-linkedin"></i>
+            <i class="grow fa-brands fa-linkedin"></i>
           </a>
         </div>
       </div>
