--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       html, body {
           height: 100%;
           font-family: play;
-          color:rgb(27, 44, 63);
-          background-color: floralwhite;
+          color: #191a1b;
+          background-color: #fffaf2;
       }
 
       .App {
@@ -82,6 +82,9 @@
       .link a:link {
         color:inherit;
       }
+
+      a:visited { none; color: #191a1b; }
+
     </style>
     <title>merctron.com</title>
   </head>
