--- a/blog.html
+++ b/blog.html
@@ -57,6 +57,13 @@
           line-height: 1.5;
       }
 
+      blockquote p {
+        background: #E7D6CB;
+        border-left: 5px solid;
+        padding: 10px;
+        border-color: #2D3142;
+      }
+
       .App {
         display: flex;
         margin-top: 2em;
