--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           monospace;
       }
 
-      html, body {
+      html, body, li {
           height: 100%;
           font-family: play;
           color: #191a1b;
