--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           monospace;
       }
 
-      html, body, li {
+      html, body {
           height: 100%;
           font-family: play;
           color: #191a1b;
@@ -53,6 +53,10 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+      }
+
+      ol li {
+        font-family: helvetica;
       }
 
       .App-header {
