CSS fix for links in blog

--- a/blog.html
+++ b/blog.html
@@ -64,6 +64,10 @@
         border-color: #2D3142;
       }
 
+      .App li {
+        font-family: helvetica;
+      }
+
       .App {
         display: flex;
         margin-top: 2em;
